fixed the spacing and padding in project cards

--- a/styles.css
+++ b/styles.css
@@ -440,9 +440,9 @@ footer {
 
   #projects-card {
     grid-template-columns: repeat(3, 1fr);
-    column-gap: 20px;
-    padding-left: 20px;
-    padding-right: 20px;
+    column-gap: 30px;
+    padding-left: 50px;
+    padding-right: 50px;
   }
 
   .project .languages {
@@ -470,13 +470,11 @@ footer {
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
     grid-auto-rows: minmax(300px, auto);
-    row-gap: 20px;
-
-    /* margin: 0 20px; */
+    row-gap: 30px;
     justify-content: center;
     column-gap: 10px;
-    margin-left: 50px;
-    margin-right: 50px;
+    margin-left: 80px;
+    margin-right: 80px;
   }
 
   #headline-section {
